--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.template == 'archive-year' %}{{ page.title | date: "%Y" }} - {{ site.title }}
+      {% elsif page.template == 'archive-month' %}{{ page.title | date: "%B %Y" }} - {{ site.title }}
+      {% elsif page.title %}{{ page.title }}
+      {% else %}{{ site.title }}
+      {% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
