Make a new description

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-col-1 column">
       <ul>
         <li>{{ site.name }}</li>
-        <li>{{ site.about_me}} <a href="http://eyeo.com">Eyeo</a></li>
+        <li>{{ site.about_me}}</li>
         <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
       </ul>
     </div>
