--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,13 @@
 
   <div class="wrap">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <h2 class="footer-heading">{{ site.name }}</h2>
 
     <div class="footer-col-1 column">
       <ul>
-        <li>{{ site.name }}</li>
+        <li>{{ site.author.name }}</li>
         <li>{{ site.about_me}}</li>
-        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        <li><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
       </ul>
     </div>
 
