--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.template == 'archive-year' %}{{ page.title | date: "%Y" }} - {{ site.title }}
-      {% elsif page.template == 'archive-month' %}{{ page.title | date: "%B %Y" }} - {{ site.title }}
+    <title>{% if page.template == 'archive-year' %}{{ page.title | date: "%Y" }} - {{ site.name }}
+      {% elsif page.template == 'archive-month' %}{{ page.title | date: "%B %Y" }} - {{ site.name }}
       {% elsif page.title %}{{ page.title }}
-      {% else %}{{ site.title }}
+      {% else %}{{ site.name }}
       {% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title}} - Feed" href="{{ "/feed.xml" | prepend: site.baseurl }}">
+    {% feed_meta %} 
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
