--- a/_layouts/archive-month.html
+++ b/_layouts/archive-month.html
@@ -5,7 +5,7 @@ template: archive-month
 <div class="post">
 
   <header class="post-header">
-    <h1>{{ page.title | date: "%B %Y" }}</h1>
+    <h1>Archive of posts from {{ page.date | date: "%B %Y" }}</h1>
   </header>
 
   <ul class="posts">
