--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    {% seo %}
 </head>
