--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,8 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     {% feed_meta %} 
-
+    {% seo title=false %}
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    {% seo %}
 </head>
