Make some fixes in RSS Feed and Redirect

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,7 +17,7 @@
     <div class="footer-col-2 column">
       <ul>
         <li>
-          <a href="{{ .RSSLink }}">
+          <a href="{{ .Site.RSSLink }}">
             <span class="fa fa-rss fa-lg fa-fw"></span>
             <span class="username">RSS</span>
           </a>
