--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,7 +9,7 @@
     <meta name="description" content="{{ .Site.Params.description }}">
     <link rel="canonical" href="{{ .Permalink }}">
     <!-- atom & rss feed -->
-    <link href="/rss.xml" type="application/atom+xml" rel="alternate" title="{{ .Site.Title }}">
+    <link href="{{ .Site.RSSLink }}" type="application/atom+xml" rel="alternate" title="{{ .Site.Title }}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/main.css">
